--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -8,6 +8,11 @@ on:
             main
     workflow_dispatch:
 
+permissions:
+    id-token: write
+    contents: read
+    
+
 jobs:
     glue_dev_deploy:
         uses: ./.github/workflows/deployment_template.yaml
