fix: updated workdir

--- a/.github/workflows/deployment_template.yaml
+++ b/.github/workflows/deployment_template.yaml
@@ -38,7 +38,7 @@ jobs:
               with:
                 terraform_version: ${{env.tf_version}}         
             - name: terraform init
-              working-directory: ./infra
+              working-directory: ./
               run: |
                 terraform init
                 # terraform test
