--- a/.github/workflows/tf_destroy.yaml
+++ b/.github/workflows/tf_destroy.yaml
@@ -9,7 +9,7 @@ on:
                 options: ["dev","test","prod"]
                 description: Select the AWS environment to destroy resources in
 jobs:
-    glue_dev_deploy:
+    destroy:
         uses: ./.github/workflows/deployment_template.yaml
         with:
             step_name: destroy
