--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -2,9 +2,13 @@
 name: Dev deployment
 on:
     pull_request:
+        paths-ignore:
+            - README.md
         branches:
             main
     push:
+        paths-ignore:
+            - README.md
         branches:
             main
     workflow_dispatch:
