fix: skip workflows on image update

--- a/.github/workflows/deploy_dev.yaml
+++ b/.github/workflows/deploy_dev.yaml
@@ -4,11 +4,13 @@ on:
     pull_request:
         paths-ignore:
             - README.md
+            - "images/**"
         branches:
             main
     push:
         paths-ignore:
             - README.md
+            - "images/**"
         branches:
             main
     workflow_dispatch:
