--- a/.github/workflows/deployment_template.yaml
+++ b/.github/workflows/deployment_template.yaml
@@ -37,17 +37,13 @@ jobs:
             - uses: hashicorp/setup-terraform@v3
               with:
                 terraform_version: ${{env.tf_version}}         
-            - name: Setup ash
+            - name: Setup & run ash
               working-directory: ./
               run: |
                 mkdir -p ash
                 git clone https://github.com/awslabs/automated-security-helper "./ash"
                 export PATH="${PATH}:./ash"
-                ash --version       
-            - name: Run ash
-              working-directory: ./
-              run: |
-                ash --source-dir ./.github/workflows                
+                ash --source-dir ./.github/workflows                   
             - name: terraform init
               working-directory: ./
               run: |
