--- a/.github/workflows/deployment_template.yaml
+++ b/.github/workflows/deployment_template.yaml
@@ -43,7 +43,7 @@ jobs:
                 mkdir -p ash
                 git clone https://github.com/awslabs/automated-security-helper "./ash"
                 export PATH="${PATH}:./ash"
-                ash --source-dir ./                   
+                ash --source-dir . -ext .tf    
             - name: terraform init
               working-directory: ./
               run: |
