--- a/.github/workflows/deployment_template.yaml
+++ b/.github/workflows/deployment_template.yaml
@@ -37,13 +37,13 @@ jobs:
             - uses: hashicorp/setup-terraform@v3
               with:
                 terraform_version: ${{env.tf_version}}         
-            - name: Setup & run ash
-              working-directory: ./
-              run: |
-                mkdir -p ash
-                git clone https://github.com/awslabs/automated-security-helper "./ash"
-                export PATH="${PATH}:./ash"
-                ash --source-dir . -ext .tf    
+            # - name: Setup & run ash
+            #   working-directory: ./
+            #   run: |
+            #     mkdir -p ash
+            #     git clone https://github.com/awslabs/automated-security-helper "./ash"
+            #     export PATH="${PATH}:./ash"
+            #     ash --source-dir . -ext .tf    
             - name: terraform init
               working-directory: ./
               run: |
